--- a/catalog-service/package.json
+++ b/catalog-service/package.json
@@ -4,6 +4,9 @@
   "description": "Catalog Service - Event and seat management",
   "main": "index.js",
   "type": "module",
+  "engines": {
+    "node": ">=22.0.0"
+  },
   "scripts": {
     "start": "node index.js",
     "dev": "node --watch index.js"
@@ -12,9 +15,10 @@
   "author": "TicketBuster Team",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.21.0",
+    "express": "^5.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.0",
-    "morgan": "^1.10.0"
+    "dotenv": "^16.4.7",
+    "morgan": "^1.10.0",
+    "pg": "^8.13.1"
   }
 }
