--- a/order-worker/requirements.txt
+++ b/order-worker/requirements.txt
@@ -1,5 +1,30 @@
-fastapi>=0.115.0
-uvicorn[standard]>=0.32.0
-pydantic>=2.9.2
-python-dotenv>=1.0.0
-httpx>=0.27.0
+# TicketBuster Order Worker - Python Dependencies
+# Updated for Python 3.13 (January 2026)
+
+# Web Framework
+fastapi>=0.115.6
+uvicorn[standard]>=0.34.0
+
+# Data Validation
+pydantic>=2.10.4
+pydantic-settings>=2.7.1
+
+# Environment
+python-dotenv>=1.0.1
+
+# HTTP Client
+httpx>=0.28.1
+
+# Database
+asyncpg>=0.30.0
+sqlalchemy>=2.0.36
+
+# Message Queue
+aio-pika>=9.5.4
+
+# gRPC
+grpcio>=1.69.0
+grpcio-tools>=1.69.0
+
+# Utilities
+python-multipart>=0.0.20
