Desarrollo del Microservicio de Catálogo (Node.js) y API Gateway & Productor de Mensajes

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -12,11 +12,12 @@ services:
     container_name: ticketbuster-postgres
     restart: unless-stopped
     ports:
-      - "${POSTGRES_PORT:-5432}:5432"
+      - "${POSTGRES_PORT:-15433}:5432"
     environment:
       POSTGRES_USER: ${POSTGRES_USER:-admin}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-admin}
       POSTGRES_DB: ${POSTGRES_DB:-ticketbuster}
+      POSTGRES_HOST_AUTH_METHOD: ${POSTGRES_HOST_AUTH_METHOD:-scram-sha-256}
       PGDATA: /var/lib/postgresql/data/pgdata
     volumes:
       # Auto-initialize database with schemas and sample data
