--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -2,24 +2,25 @@
   "name": "api-gateway",
   "version": "1.0.0",
   "description": "API Gateway for TicketBuster microservices",
-  "main": "index.js",
+  "main": "src/index.js",
   "type": "module",
   "engines": {
-    "node": ">=22.0.0"
+    "node": ">=20.0.0"
   },
   "scripts": {
-    "start": "node index.js",
-    "dev": "node --watch index.js"
+    "start": "node src/index.js",
+    "dev": "node --watch src/index.js"
   },
   "keywords": ["api", "gateway", "express", "ticketbuster"],
   "author": "TicketBuster Team",
   "license": "MIT",
   "dependencies": {
-    "express": "^5.0.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "helmet": "^8.0.0",
-    "morgan": "^1.10.0",
-    "compression": "^1.7.5"
+    "amqplib": "*",
+    "cors": "*",
+    "dotenv": "*",
+    "express": "^4.21.0",
+    "jsonwebtoken": "*",
+    "jwks-rsa": "*",
+    "uuid": "*"
   }
 }
