--- a/catalog-service/package.json
+++ b/catalog-service/package.json
@@ -2,23 +2,24 @@
   "name": "catalog-service",
   "version": "1.0.0",
   "description": "Catalog Service - Event and seat management",
-  "main": "index.js",
+  "main": "src/index.js",
   "type": "module",
   "engines": {
-    "node": ">=22.0.0"
+    "node": ">=20.0.0"
   },
   "scripts": {
-    "start": "node index.js",
-    "dev": "node --watch index.js"
+    "start": "node src/index.js",
+    "dev": "node --watch src/index.js"
   },
   "keywords": ["catalog", "events", "seats", "ticketbuster"],
   "author": "TicketBuster Team",
   "license": "MIT",
   "dependencies": {
-    "express": "^5.0.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "morgan": "^1.10.0",
-    "pg": "^8.13.1"
+    "@grpc/grpc-js": "*",
+    "@grpc/proto-loader": "*",
+    "cors": "*",
+    "dotenv": "*",
+    "express": "^4.21.0",
+    "pg": "*"
   }
 }
