--- a/notification-service/package.json
+++ b/notification-service/package.json
@@ -2,23 +2,23 @@
   "name": "notification-service",
   "version": "1.0.0",
   "description": "Notification Service - Real-time notifications via WebSockets",
-  "main": "index.js",
+  "main": "src/index.js",
   "type": "module",
   "engines": {
     "node": ">=20.0.0"
   },
   "scripts": {
-    "start": "node index.js",
-    "dev": "node --watch index.js"
+    "start": "node src/index.js",
+    "dev": "node --watch src/index.js"
   },
-  "keywords": ["notifications", "websockets", "realtime", "ticketbuster"],
+  "keywords": ["notifications", "websockets", "realtime", "ticketbuster", "socket.io"],
   "author": "TicketBuster Team",
   "license": "MIT",
   "dependencies": {
-    "amqplib": "*",
-    "cors": "*",
-    "dotenv": "*",
+    "amqplib": "^0.10.5",
+    "cors": "^2.8.5",
+    "dotenv": "^17.0.0",
     "express": "^4.21.0",
-    "ws": "*"
+    "socket.io": "^4.8.1"
   }
 }
