--- a/catalog-service/package.json
+++ b/catalog-service/package.json
@@ -11,7 +11,12 @@
     "start": "node src/index.js",
     "dev": "node --watch src/index.js"
   },
-  "keywords": ["catalog", "events", "seats", "ticketbuster"],
+  "keywords": [
+    "catalog",
+    "events",
+    "seats",
+    "ticketbuster"
+  ],
   "author": "TicketBuster Team",
   "license": "MIT",
   "dependencies": {
@@ -20,6 +25,7 @@
     "cors": "*",
     "dotenv": "*",
     "express": "^4.21.0",
+    "morgan": "^1.10.1",
     "pg": "*"
   }
 }
