--- a/catalog-service/Dockerfile
+++ b/catalog-service/Dockerfile
@@ -2,12 +2,15 @@ FROM node:22-alpine
 
 WORKDIR /app
 
+# Copy package files
 COPY package*.json ./
 
+# Install dependencies
 RUN npm install
 
+# Copy application code
 COPY . .
 
-EXPOSE 3001
+EXPOSE 3000 50051
 
 CMD ["npm", "start"]
