Configuración del carrito de compras y entorno inicial de Keycloak

--- a/api-gateway/.env.example
+++ b/api-gateway/.env.example
@@ -1,6 +1,9 @@
 PORT=8000
 CATALOG_URL=http://localhost:3000
 RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672
-KEYCLOAK_URL=http://keycloak:8080
+KEYCLOAK_URL=http://localhost:8080
 KEYCLOAK_REALM=ticketbuster
-DEV_MODE=true
+KEYCLOAK_CLIENT_ID=ticketbuster-frontend
+KEYCLOAK_AUDIENCE=ticketbuster-frontend
+KEYCLOAK_JWKS_URI=http://localhost:8080/realms/ticketbuster/protocol/openid-connect/certs
+DEV_MODE=false
