--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -61,20 +61,18 @@ services:
   # Keycloak Identity & Access Management
   # ================================================
   keycloak:
-    image: quay.io/keycloak/keycloak:26.0
+    image: ${KEYCLOAK_IMAGE:-keycloak/keycloak:23.0.0}
     container_name: ticketbuster-keycloak
     restart: unless-stopped
     command: start-dev
     ports:
       - "${KEYCLOAK_PORT:-8080}:8080"
-      - "9000:9000"  # Management port for health/metrics
     environment:
       KEYCLOAK_ADMIN: ${KEYCLOAK_ADMIN:-admin}
       KEYCLOAK_ADMIN_PASSWORD: ${KEYCLOAK_ADMIN_PASSWORD:-admin}
       KC_HEALTH_ENABLED: "true"
       KC_METRICS_ENABLED: "true"
-      KC_HTTP_MANAGEMENT_PORT: "9000"
-      # Development mode - uses H2 database file (Keycloak 24.0+)
+      # Development mode - uses embedded storage
       KC_DB: dev-file
     volumes:
       - keycloak_data:/opt/keycloak/data
