--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,7 +1,7 @@
 # Environment variables for TicketBuster Frontend
 
-# API Gateway URL (proxy configured in vite.config.js for /api)
-VITE_API_URL=/api
+# API Gateway URL (usa host:puerto real del gateway)
+VITE_API_URL=http://localhost:8000/api
 
 # Notification Service URL (Socket.io)
 VITE_NOTIFICATION_URL=http://localhost:4000
@@ -10,5 +10,5 @@ VITE_NOTIFICATION_URL=http://localhost:4000
 VITE_KEYCLOAK_URL=http://localhost:8080/realms/ticketbuster
 VITE_KEYCLOAK_CLIENT_ID=ticketbuster-frontend
 
-# Development Mode (enables mock user)
-VITE_DEV_MODE=true
+# Development Mode (solo si no tienes Keycloak listo)
+VITE_DEV_MODE=false
