--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,5 @@
 VITE_DEV_MODE=false
 VITE_API_URL=/api
-VITE_KEYCLOAK_URL=http://localhost:9080/realms/ticketbuster
+VITE_KEYCLOAK_URL=/auth/realms/ticketbuster
 VITE_KEYCLOAK_CLIENT_ID=ticketbuster-frontend
-VITE_NOTIFICATION_URL=http://localhost:4000
+VITE_NOTIFICATION_URL=
